--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,103 +1,83 @@
-<footer class="bg-light">
-  <div class="bg-primary">
-    <div class="container">
+<!-- Footer -->
+<footer class="page-footer font-small blue pt-4">
 
-      <div class="row py-4 d-flex align-items-center">
+  <!-- Footer Links -->
+  <div class="container-fluid text-center text-md-left">
 
-        <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
-          <h6 class="mb-0">Alors fan d'upcycling autant que nous ?</h6>
-        </div>
+    <!-- Grid row -->
+    <div class="row">
 
-        <div class="col-md-6 col-lg-7 text-center text-md-right">
+      <!-- Grid column -->
+      <div class="col-md-6 mt-md-0 mt-3">
 
-          <a class="fb-ic">
-            <i class="fab fa-facebook-f white-text mr-4"> </i>
-          </a>
+        <!-- Content -->
+        <h5 class="text-uppercase">Footer Content</h5>
+        <p>Here you can use rows and columns to organize your footer content.</p>
 
-          <a class="tw-ic">
-            <i class="fab fa-twitter white-text mr-4"> </i>
-          </a>
-
-          <a class="gplus-ic">
-            <i class="fab fa-google-plus-g white-text mr-4"> </i>
-          </a>
-
-          <a class="li-ic">
-            <i class="fab fa-linkedin-in white-text mr-4"> </i>
-          </a>
-
-          <a class="ins-ic">
-            <i class="fab fa-instagram white-text"> </i>
-          </a>
-        </div>
- 
       </div>
- 
-    </div>
-  </div>
+      <!-- Grid column -->
 
-  <div class="container text-center text-md-left mt-5">
+      <hr class="clearfix w-100 d-md-none pb-3">
 
-    <div class="row mt-3">
+      <!-- Grid column -->
+      <div class="col-md-3 mb-md-0 mb-3">
 
-      <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+        <!-- Links -->
+        <h5 class="text-uppercase">Links</h5>
 
-        <h6 class="text-uppercase font-weight-bold">Chaton Project</h6>
-        <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-        <p>Chaton Project est une entreprise très populaire auprès des Hommes, comme des chats. Une histoire d'amour ça ne s'invente pas et là ben... c'est le cas.</p>
+        <ul class="list-unstyled">
+          <li>
+            <a href="#!">Link 1</a>
+          </li>
+          <li>
+            <a href="#!">Link 2</a>
+          </li>
+          <li>
+            <a href="#!">Link 3</a>
+          </li>
+          <li>
+            <a href="#!">Link 4</a>
+          </li>
+        </ul>
+
       </div>
+      <!-- Grid column -->
 
-      <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+      <!-- Grid column -->
+      <div class="col-md-3 mb-md-0 mb-3">
 
-        <h6 class="text-uppercase font-weight-bold">Nos produits</h6>
-        <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-        <p>
-          <a href="#!">Notre sélection</a>
-        </p>
-        <p>
-          <a href="#!">Favoris du site</a>
-        </p>
-        <p>
-          <a href="https://www.estrepublicain.fr/justice/2012/05/24/un-chat-peut-en-cacher-un-autre">Un chat peut en cacher un autre</a>
-        </p>
+        <!-- Links -->
+        <h5 class="text-uppercase">Links</h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="#!">Link 1</a>
+          </li>
+          <li>
+            <a href="#!">Link 2</a>
+          </li>
+          <li>
+            <a href="#!">Link 3</a>
+          </li>
+          <li>
+            <a href="#!">Link 4</a>
+          </li>
+        </ul>
+
       </div>
-
-      <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-
-        <h6 class="text-uppercase font-weight-bold">Liens utiles</h6>
-        <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-        <p>
-          <%= link_to "Votre profil" %>
-        </p>
-        <p>
-          <%= link_to "Panier"%>
-        </p>
-        <p>
-          <a href="https://en.wiktionary.org/wiki/discombobulator">Discombobulator wtf is it?</a>
-        </p>
-      </div>
-
-      <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-
-        <h6 class="text-uppercase font-weight-bold">Contact</h6>
-        <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-        <p>
-          <i class="fas fa-home mr-3"></i>47 rue des allumés de la life, 69005 Lyon, France</p>
-        <p>
-          <i class="fas fa-envelope mr-3"></i> chaton@petit-minou.com</p>
-        <p>
-          <i class="fas fa-phone mr-3"></i> + 33 4 23 45 67 88 <small>Mais ne nous appelez pas, on aime pas trop le téléphone.</small></p>
-      </div>
+      <!-- Grid column -->
 
     </div>
+    <!-- Grid row -->
 
   </div>
+  <!-- Footer Links -->
 
-  <div class="footer-copyright text-center py-3">
-    <blockquote>
-      "Soyez fou, soyez footer"
-    </blockquote>
-    © 2020 Copyright:<a href="https://petits-chatons-by-lyon-thp.herokuapp.com/">Petits chats choupinou</a>
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
   </div>
+  <!-- Copyright -->
 
 </footer>
+<!-- Footer -->
