--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,5 @@
 <!-- Footer -->
+
 <footer class="page-footer font-small blue pt-4 fixed-bottom">
 
   <!-- Footer Links -->
@@ -12,6 +13,7 @@
 
         <!-- Content -->
         <h5 class="text-uppercase">Le mot de la fin</h5>
+        
         <p>Be careful about the coronavirus hein.</p>
 
       </div>
@@ -24,20 +26,17 @@
 
         <!-- Links -->
         <h5 class="text-uppercase">Contact</h5>
-
+        
         <ul class="list-unstyled">
           <li>
-            <a href="#!">Link 1</a>
+            <i class="fab fa-facebook-square"></i>
+            <a href="https://www.facebook.com/LatelierdesNouveauxDesigns/">Facebook</a>
           </li>
           <li>
-            <a href="#!">Link 2</a>
+          <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/company/atelier-des-nouveaux-designs/">Linkedin</a>
           </li>
-          <li>
-            <a href="#!">Link 3</a>
-          </li>
-          <li>
-            <a href="#!">Link 4</a>
-          </li>
+
         </ul>
 
       </div>
@@ -46,7 +45,7 @@
 
         <!-- Links -->
         <h5 class="text-uppercase">A propos</h5>
-
+        
         <ul class="list-unstyled">
           <li>
             <a href="#!">FAQ</a>
@@ -71,7 +70,7 @@
 
         <!-- Links -->
         <h5 class="text-uppercase">Aide</h5>
-
+        
         <ul class="list-unstyled">
           <li>
             <a href="#!">Link 1</a>
