Footer is done, we will have to modify links

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <!-- Footer -->
 
 <footer class="page-footer font-small blue pt-4 fixed-bottom">
-
+  <hr>
   <!-- Footer Links -->
   <div class="container-fluid text-center text-md-left">
 
@@ -25,7 +25,7 @@
       <div class="col-md-3 mb-md-0 mb-3">
 
         <!-- Links -->
-        <h5 class="text-uppercase">Contact</h5>
+        <h5 class="text-uppercase">Réseaux sociaux</h5>
         
         <ul class="list-unstyled">
           <li>
@@ -48,7 +48,7 @@
         
         <ul class="list-unstyled">
           <li>
-            <a href="#!">FAQ</a>
+            <a href="#!">Devenir créateur</a>
           </li>
           <li>
             <a href="#!">CGV</a>
@@ -57,7 +57,7 @@
             <a href="#!">Mentions légales</a>
           </li>
           <li>
-            <a href="#!">Link 4</a>
+            <a href="#!">FAQ</a>
           </li>
         </ul>
 
@@ -73,16 +73,16 @@
         
         <ul class="list-unstyled">
           <li>
-            <a href="#!">Link 1</a>
+            <a href="#!">Nous contacter</a>
           </li>
           <li>
-            <a href="#!">Link 2</a>
+            <p> 49 Rue Smith 69002 Lyon, France </p>
           </li>
           <li>
-            <a href="#!">Link 3</a>
+            <a href="#!"></a>
           </li>
           <li>
-            <a href="#!">Link 4</a>
+            <a href="#!"></a>
           </li>
         </ul>
 
@@ -96,8 +96,8 @@
   <!-- Footer Links -->
 
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2020 Copyright:
-    <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
+  <div class="footer-copyright text-center py-3">© 2020 Upcycling:
+    <a href="https://fr.wikipedia.org/wiki/Surcyclage"> Upcyclez et vous verrez</a>
   </div>
   <!-- Copyright -->
 
