--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,12 +1,12 @@
 <!-- Footer -->
 
-<footer class="page-footer font-small blue pt-4 fixed-bottom">
+<footer class="page-footer font-small blue pt-4">
   <hr>
   <!-- Footer Links -->
   <div class="container-fluid text-center text-md-left">
 
     <!-- Grid row -->
-    <div class="row">
+    <div class="row py-4 d-flex align-items-center">
 
       <!-- Grid column -->
       <div class="col-md-3 mt-md-0 mt-3">
