--- a/lib/assets/stylesheets/style.css
+++ b/lib/assets/stylesheets/style.css
@@ -2,16 +2,22 @@
 
 .navbar-logo {
   position: absolute;
-  left: 0%;
-  transform: translatex(-60%);
+  left: 50%;
+  transform: translatex(-50%);
 }
 
 .logo{
-  width: 80px;
-  height: 80px;
+  width: 60px;
+  height: 60px;
 }
 
 .nav-item {
   font-size: larger;
+}
+
+/*CAROUSEL*/
+
+.carousel-inner img {
+  margin: auto;
 }
 
