--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   <%= render 'layouts/navbar'%>
   
   <body>
-
+  <%= render 'jumbotron'%>
   <%= render 'items/card'%>
     <%= yield %>
   </body>
