--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -4,9 +4,9 @@
   </div>
   <div class="row mb-3">
     <% @items.each do |item| %>
-    <div class="col text-center" id="grid-col-<%= item.id %>">
-      <%= item.name %>
-      <!--%= render 'card', item: item %-->
+    <div class="col-3 text-center" id="grid-col-<%= item.id %>">
+      <h6 class="small-container"><%= item.name %></h6>
+      <%= render 'layouts/card', item: item %>
     </div>
     <% end %>
   </div>
