--- a/lib/assets/stylesheets/style.css
+++ b/lib/assets/stylesheets/style.css
@@ -21,3 +21,10 @@
   margin: auto;
 }
 
+/*JUMBOTRON*/
+
+.jumbotron {
+  background-image: url("../../../app/assets/images/image2.jpg");
+  background-size: cover;
+}
+
