--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -1,3 +1,5 @@
+<%= render 'jumbotron'%>
+
 <div class="container">
   <div class="row justify-content-center mb-5 mt-3">
     <h1>Nos articles</h1>
