Fixed shop showing all items instead of just shop items

--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -5,7 +5,7 @@
     <h1>Nos articles</h1>
   </div>
   <div class="row mb-3">
-    <% @items.each do |item| %>
+    <% @shop.items.each do |item| %>
     <div class="col-3 text-center" id="grid-col-<%= item.id %>">
       <h6 class="small-container"><%= item.name %></h6>
       <%= render 'items/card', item: item %>
