--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -1,4 +1,4 @@
-<%= render 'jumbotron'%>
+<%= render 'jumbotron_show'%>
 
 <div class="container">
   <div class="row justify-content-center mb-5 mt-3">
@@ -6,10 +6,10 @@
   </div>
   <div class="row mb-3">
     <% @shop.items.each do |item| %>
-    <div class="col-3 text-center" id="grid-col-<%= item.id %>">
-      <h6 class="small-container"><%= item.name %></h6>
-      <%= render 'items/card', item: item %>
-    </div>
+      <div class="col-3 text-center" id="grid-col-<%= item.id %>">
+        <h6 class="small-container"><%= item.name %></h6>
+        <%= render 'items/card', item: item %>
+      </div>
     <% end %>
   </div>
 </div>
