Modified show + controller method show + deleted render in layouts

--- a/app/views/items/_item_show.html.erb
+++ b/app/views/items/_item_show.html.erb
@@ -24,7 +24,7 @@
   </div>
 
   <div class="col-sm">
-    <h1 class="card-title">Nom de l'item</h1>
+    <h1 class="card-title"> <%= item.name %> </h1>
     <p class="card-text"> Nom du vendeur/shop</p>
     <p ul class="card-text"> Description de l'item :
     <li>Taille</li>
