update navbar, add root on static_pages and front page index

--- a/app/views/layouts/_categories.html.erb
+++ b/app/views/layouts/_categories.html.erb
@@ -1,3 +1,5 @@
 <div class="container justify-content-center">
-  <%= link_to category.name, category_path(category.id), :class=>"nav-link dropdown-toggle" %>
+    <ul class="navbar-nav">
+  <%= link_to category.name, category_path(category.id), :class=>"nav-link  " %>
+  </ul>
 </div>
