--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,5 @@
- <div class="col-sm">
-      <br>
+<div class="col-6 container ">   
+   <br>
         <h1 class="h3 mb-3 font-weight-normal text-center">Modifiez vos données <%= resource_name.to_s.humanize %></h1
           <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
             <%= render "devise/shared/error_messages", resource: resource %>
