--- a/app/views/items/_item_show.html.erb
+++ b/app/views/items/_item_show.html.erb
@@ -38,3 +38,14 @@
   </div>
 
 </div>
+
+<div class="container">
+  <div class="col-sm">
+  </div>
+  <div class="col-sm">
+  </div>
+  <div class="col-sm">
+  </div>
+  <div class="col-sm">
+  </div>
+</div>
