modified cart_controller to cartS_controller

--- a/app/views/carts/_cart_show.html.erb
+++ b/app/views/carts/_cart_show.html.erb
@@ -1,1 +1,8 @@
-<h1> salut c'est le cart </h1>
+<div class="container">
+  <div class="col-sm">
+  </div>
+  <div class="col-sm">
+  </div><div class="col-sm">
+  </div><div class="col-sm">
+  </div>
+</div>
