--- a/app/views/items/_item_show.html.erb
+++ b/app/views/items/_item_show.html.erb
@@ -34,7 +34,10 @@
     <p> Quantité : <%= item.available_quantity %> </p>
     <p class="card-text"><small class="text-muted"></small></p>
     <p>Prix :<small class="text-muted"> <%= item.price %> € </small></p>
-    <button class="primary"> Ajouter au panier </button>
+    <%# <button class="primary"> Ajouter au panier </button> %>
+    <% if user_signed_in? %>
+    <%= button_to "Ajouter au panier", cart_path(current_user.customer.cart.id), :method => :put, :class => "btn btn-info btn-lg", params: {item_id: item.id, operation: "add"} %>
+    <% end %>
   </div>
 
 </div>
