--- a/app/views/carts/_cart_show.html.erb
+++ b/app/views/carts/_cart_show.html.erb
@@ -12,8 +12,8 @@
   </div>
 
   <div class="col-sm mr-3">
-    <h4> Nom de l'item </h4>
-    <p> Description de l'item</p>
+    <h4> <%= item.name %> </h4>
+    <p> <%= item.description %> </p>
   </div>
 
   <div class="col-sm mr-4 mt-5 row">
@@ -23,7 +23,7 @@
   </div>
 
   <div class="col-sm mr-2">
-  <h4 class="mt-5 mr-3"> Prix </h4>
+  <h4 class="mt-5 mr-3"> <%= item.price %> </h4>
   </div>
 
 </div>
