--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,11 @@
-<div class="col-6 container ">   
-   <br>
-        <h1 class="h3 mb-3 font-weight-normal text-center">Modifiez vos données <%= resource_name.to_s.humanize %></h1
+<div class = "container col-10">
+  <br>
+  <h1 class="h3 mb-3 text-center">Votre profil</h1>
+<div class="row">
+
+    <div class="col-sm">
+      <br>
+        <h1 class="h3 mb-3 font-weight-normal text-center">Modifiez votre mot de passe <%= resource_name.to_s.humanize %></h1
           <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
             <%= render "devise/shared/error_messages", resource: resource %>
               <div class="field">
@@ -34,6 +39,21 @@
             <p class="h3 mb-3 font-weight-normal text-center">Pas content ? <%= button_to "Supprimer mon compte", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-lg btn-danger btn-block" %></p>
           <%= link_to "Retour", :back %>
         </div>
+
+
+         <div class="col-sm">
+    <br>
+    <h1 class="h3 mb-3 font-weight-normal text-center">Modifiez votre adresse de livraison</h1>
+   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+  <% end %>
+  </div>
+  <div class="col-sm">
+    <br>
+    <h1 class="h3 mb-3 font-weight-normal text-center">Historique de vos commandes passées</h1>
+   
+  </div>
       </div>
+
+      
   </div>
 </div>
