--- a/app/views/carts/_cart_show.html.erb
+++ b/app/views/carts/_cart_show.html.erb
@@ -1,6 +1,6 @@
 <div class="row justify-content-center mb-5 mt-3"> <h1>Mon Panier </h1>
   <div class="container row">
-    <% cart.items.each do |item| %>
+    <% cart.cart_items.each do |cart_item| %>
       <div class="col-sm mr-1">
       <i class="fas fa-trash ml-5 mt-5"></i>
     </div>
@@ -10,18 +10,18 @@
     </div>
 
     <div class="col-sm mr-3">
-      <h4> <%= item.name %> </h4>
-      <p> <%= item.description %> </p>
+      <h4> <%= cart_item.item.name %> </h4>
+      <p> <%= cart_item.item.description %> </p>
     </div>
 
     <div class="col-sm mr-4 mt-5 row">
       <i class="fas fa-plus-square mt-2 mr-3"></i>
-      <h4>Quantité</h4>
+      <h4>Quantité: <%= cart_item.cart_quantity %></h4>
       <i class="fas fa-minus-square mt-2 ml-3"></i>
     </div>
 
     <div class="col-sm mr-2">
-    <h4 class="mt-5 mr-3"> <%= item.price %> </h4>
+    <h4 class="mt-5 mr-3"> <%= cart_item.item.price %> </h4>
     </div>
     <% end %>
     
