--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -10,3 +10,22 @@ Adresse du maker: <%= @shop.maker.address.complete_address%>
 //  l'adresse de customer n'est pas encore créée car on n'a pas le formulaire mais ce sera : current_user.customer.address
 
 </div>
+
+<%= form_tag carts_path do %>
+  <article>
+    <% if flash[:error].present? %>
+      <div id="error_explanation">
+        <p><%= flash[:error] %></p>
+      </div>
+    <% end %>
+    <label class="amount">
+      <span>Amount: $5.00</span>
+    </label>
+  </article>
+
+  <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+          data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+          data-description="A month's subscription"
+          data-amount="500"
+          data-locale="auto"></script>
+<% end %>
