--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -1,8 +1,11 @@
 <%= render 'jumbotron_show'%>
 
 <div class="container">
-  <div class="row justify-content-center mb-5 mt-3">
+  <div class="row justify-content-center mb-4 mt-3">
     <h1>Nos articles</h1>
+  </div>
+  <div class="row justify-content-center mb-5 mt-1" >
+   <%= link_to "Editer ma boutique", edit_shop_path, :class=>"fas fa-store" %>
   </div>
   <div class="row mb-3">
     <% @shop.items.each do |item| %>
