Create controller maker

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -62,4 +62,7 @@
 
     </div>
   </div>
+    <div class="actions mt-5">  
+      <%= link_to "Devenir artisan ?", new_maker_path, :class=>"btn btn-lg btn-info btn-block" %>
+    </div>
 </div>
