--- a/app/views/items/_item_show.html.erb
+++ b/app/views/items/_item_show.html.erb
@@ -24,8 +24,7 @@
   </div>
 
   <div class="col-sm">
-    <h1 class="card-title"> <%= item.name %> </h1>
-    <%# <p class="card-text"> <%= shop.name %> </p>
+    <h1 class="card-title"> <%= item.name %> | <%= item.shop.name %> </h1>
     <p ul class="card-text"> <%= item.description %>
     <%# <li><%= item.size %></li>
     <%# <li><%= item.matter %></li>
