--- a/app/views/items/_item_show.html.erb
+++ b/app/views/items/_item_show.html.erb
@@ -31,12 +31,11 @@
     <%# <li><%= item.maintenance %> </li>
     </ul></p>
     <p> Quantité : <%= item.available_quantity %> </p>
-    <p class="card-text"><small class="text-muted"></small></p>
-    <p>Prix :<small class="text-muted"> <%= item.price %> € </small></p>
+    <p class="card-text"> Prix : <%= item.price %> € </p>
     <%# <button class="primary"> Ajouter au panier </button> %>
     <% if user_signed_in? %>
       <% if is_item_quantity_sufficient_to_add_another_to_cart(item.id) == true %>
-         <%= button_to "Ajouter au panier", cart_path(current_user.customer.cart.id), :method => :put, :class => "btn btn-info btn-lg", params: {item_id: item.id, operation: "add"} %>
+         <%= button_to "Ajouter au panier", cart_path(current_user.customer.cart.id), :method => :put, :class => "btn btn-primary", params: {item_id: item.id, operation: "add"} %>
       <% else %>
           <button class="btn btn-warning btn-lg" disabled>Epuisé</button>
       <% end %>
