--- a/app/views/items/_item_show.html.erb
+++ b/app/views/items/_item_show.html.erb
@@ -24,7 +24,8 @@
   </div>
 
   <div class="col-sm">
-    <h1 class="card-title"> <%= item.name %> | <%= item.shop.name %> </h1>
+    <h1 class="card-title"> <%= item.shop.name %> |  </h1>
+    <h2 class="card-title"> <%= item.name %> </h2>
     <p ul class="card-text"> <%= item.description %>
     <%# <li><%= item.size %></li>
     <%# <li><%= item.matter %></li>
