--- a/app/views/carts/_cart_show.html.erb
+++ b/app/views/carts/_cart_show.html.erb
@@ -1,26 +1,20 @@
-<h1 class="text-center">Mon Panier </h1>
-<div class=""> 
-  <% cart.cart_sections.each do |cart_section_key, cart_session_value| %>
-  <div class="d-flex flex-column bd-highlight ">
-    <% shop = Shop.find_by(id: cart_section_key.to_i)%>
-     <div>
-      Shop: <%=shop.name%>
-     </div>
-     <div class="cart-section-container d-flex flex-row border border-primary justify-content-between">
-      <% cart_session_value.each do |cart_item| %>
-        <div class="cart-item-container p-2 bd-highlight justify-content-center">
-          <div class="d-flex "><%=cart_item.item.name%></div>
-            <div class="d-flex flex-row justify-content-center">
-              <i class="fas fa-minus-square "></i>
-              <div class="ml-3 mr-3">
-                <%=cart_item.cart_quantity%>
-              </div>
-              <i class="fas fa-plus-square "></i>
-            </div>
-        </div>
-      <% end %>
-      <%= link_to "Commander", new_order_path(:cart_id => cart.id, :section_id => cart_section_key.to_i), :class => "ml-3 btn btn-success align-self-center float-right" %>
-     </div>
+<% shop = Shop.find_by(id: key.to_i)%>
+
+<div>
+  Shop: <%=shop.name%>
+</div>
+<div class="cart-section-container d-flex flex-row border border-primary">
+<% value.each do |cart_item| %>
+  <div class="cart-item-container p-2 bd-highlight justify-content-center">
+    <div><%=cart_item.item.name%></div>
+    <div class="d-flex flex-row justify-content-center">
+      <i class="fas fa-minus-square "></i>
+      <div class="ml-3 mr-3">
+        <%=cart_item.cart_quantity%>
+      </div>
+      <i class="fas fa-plus-square "></i>
+    </div>
+    <%= link_to "Commander", new_order_path(:cart_id => @cart.id, :section_id => cart_section_key.to_i), :class => "ml-3 btn btn-success align-self-center float-right" %>
   </div>
-    <% end %>
+<% end %>
 </div>
