--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -4,7 +4,9 @@
 <div class="container">
   <div class="row row-cols-1 row-cols-md-3">
     <% @category.items.each do |item| %>
+     <% if !item.is_archived %>
       <%= render 'items/card', item: item %>
+     <% end %> 
     <% end %>
   </div>
 </div>
