--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -9,10 +9,12 @@
   </div>
   <div class="row mb-3">
     <% @shop.items.each do |item| %>
+     <% if !item.is_archived %>
       <div class="col-3 text-center" id="grid-col-<%= item.id %>">
         <h6 class="small-container"><%= item.name %></h6>
         <%= render 'items/card', item: item %>
       </div>
+     <% end %>
     <% end %>
   </div>
 </div>
