--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -2,6 +2,7 @@
 
 <% @cart.cart_sections.each do |cart_section_key, cart_session_value| %>
   <div class="d-flex flex-column bd-highlight ">
-    <%= render 'cart_show', key: cart_section_key, value: cart_session_value, @cart: @cart %>
+    <%= render 'cart_show', key: cart_section_key, value: cart_session_value %>
+    <%= link_to "Commander", new_order_path(:cart_id => @cart.id, :section_id => cart_section_key.to_i), :class => "ml-3 btn btn-success align-self-center float-right" %>
   </div>
 <% end %>
