--- a/app/views/makers/new.html.erb
+++ b/app/views/makers/new.html.erb
@@ -1,7 +1,7 @@
 <div class="col-6 container ">
 <h2 class= "p-4 text-center">Ouvrir un compte artisan</h2>
 
- <%= form_with model: @maker, url: maker_path(current_user.id), method: "put" do |f| %>
+ <%= form_with url: maker_new_maker_email_path(current_user.id) do |f| %>
   <div class="field m-3">
     <%= f.label :prénom %>
     <%= f.text_field :first_name, autofocus: true, autocomplete: "prénom", class: "form-control" %>
