--- a/app/views/items/_item_show.html.erb
+++ b/app/views/items/_item_show.html.erb
@@ -40,7 +40,8 @@
       <% else %>
           <button class="btn btn-warning btn-lg" disabled>Epuisé</button>
       <% end %>
-     
+    <% else %> 
+      <%= link_to "Se connecter pour ajouter au panier", new_user_registration_path, :class => "btn btn-info" %>
     <% end %>
   </div>
 
