--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,8 +1,8 @@
   <% puts "(" * 200 %>
   <% puts @shop %>
-  <%= form_with(model: Item.new, url: items_path) do |f| %>
-          <%= render 'item_details_form', f: f %>
-          <%= f.hidden_field :shop_id, :value => @shop.id %>
-          
-          <%= f.submit "Créer"%>
-        <% end %>
+  <%= form_with(model: Item.new, url: items_path, multipart: true) do |f| %>
+    <%= render 'item_details_form', f: f %>
+    <%= f.hidden_field :shop_id, :value => @shop.id %>
+
+    <%= f.submit "Créer"%>
+  <% end %>
