--- a/app/views/items/_plus_minus_quantity_in_cart.html.erb
+++ b/app/views/items/_plus_minus_quantity_in_cart.html.erb
@@ -5,7 +5,7 @@
   </span>
 <% end %>
   <div class="ml-3 mr-3">
-    <%=current_user.customer.cart.add_item(item_id)%>
+    <%=current_user.customer.cart.add_item(cart_item_id)%>
   </div>
   <%= button_to cart_path, :method => :patch, :class => "button is-link", params: {operation: "add"} do %>
   <span class="icon">
@@ -13,7 +13,7 @@
   </span>
 <% end %>
 <div class="ml-3 mr-3">
-    <%=current_user.customer.cart.remove_item(item_id)%>
+    <%=current_user.customer.cart.remove_item(cart_item_id)%>
   </div>
 </div>
 
