--- a/app/views/items/_plus_minus_quantity_in_cart.html.erb
+++ b/app/views/items/_plus_minus_quantity_in_cart.html.erb
@@ -1,19 +1,19 @@
 <div class="d-flex flex-row justify-content-center">
-<%= button_to cart_path, :method => :patch, :class => "button is-link", params: {operation: "remove"} do %>
+<%= button_to cart_path(cart_item.id), :method => :patch, :class => "button is-link", params: {operation: "remove"} do %>
   <span class="icon">
     <i class="fas fa-minus-square "></i>
   </span>
 <% end %>
   <div class="ml-3 mr-3">
-    <%=current_user.customer.cart.add_item(cart_item_id)%>
+    <%=current_user.customer.cart.remove_item(cart_item.id)%>
   </div>
-  <%= button_to cart_path, :method => :patch, :class => "button is-link", params: {operation: "add"} do %>
+  <%= button_to cart_path(cart_item.id), :method => :patch, :class => "button is-link", params: {operation: "add"} do %>
   <span class="icon">
     <i class="fas fa-plus-square"></i>
   </span>
 <% end %>
 <div class="ml-3 mr-3">
-    <%=current_user.customer.cart.remove_item(cart_item_id)%>
+    <%=current_user.customer.cart.add_item(cart_item.id)%>
   </div>
 </div>
 
