--- a/app/views/items/_item_details_form.html.erb
+++ b/app/views/items/_item_details_form.html.erb
@@ -3,19 +3,19 @@
     <%= f.label :name, 'Nom de l\'objet'%>
     <%= f.text_field :name, class: "form-control", placeholder: "Brosse à dents", :maxlength=>"40", :minlength =>"2" %>
   </div>
-  <div class="form-group mt-3 mb-3"">
+  <div class="form-group mt-3 mb-3">
     <%= f.label :description, 'Description de l\'objet' %>
     <%= f.text_area :description, class: "form-control", :rows=>"4", placeholder: "Cet objet est fabriqué ...", :maxlength=>"250", :minlength =>"20" %>
   </div>
-  <div class="form-group mt-3 mb-3"">
+  <div class="form-group mt-3 mb-3">
     <%= f.label :price, 'Prix de l\'objet (€)'  %>
     <%= f.number_field(:price, in: 0.5..800.0, step: 0.5, class: "form-control") %>
   </div>
-  <div class="form-group mt-3 mb-3"">
+  <div class="form-group mt-3 mb-3">
     <%= f.label :available_quantity, 'Quantité disponible'  %>
     <%= f.number_field(:available_quantity, in: 0..1000, step: 1, class: "form-control") %>
   </div>
-  <div class="form-group mt-3 mb-3"">
+  <div class="form-group mt-3 mb-3">
     <%= f.label :category_id, 'Catégorie'  %>
     <%= select_tag(:category_id, options_from_collection_for_select(Category.all, :id, :name), class: "form-control") %>
   </div>
