--- a/app/views/items/_card.html.erb
+++ b/app/views/items/_card.html.erb
@@ -42,8 +42,9 @@
           <%= image_tag "logo.png", class: "card-img-top img-fluid w-100 rounded mx-auto d-block" %>
         <% end %>
           <h1 class="card-title text-white"> <%= item.name %> </h1>
-          <div class="bg-primary text-white mt-3 sticky-bottom"> <h5><%= item.shop.name %></h5> </div>
+          
       </div>
+      <div class="bg-primary text-white mt-3 sticked-bottom"> <h5><%= item.shop.name %></h5> </div>
       <div class="details">
         <div class="center">
           <h6 class="card-title"> <%= item.name %> </h6>
@@ -52,6 +53,7 @@
           </div>
           <%= link_to "Détails", item_path(item.id), :class=>"btn btn-primary"%>
           <p class="card-text text-muted mt-3"><%= number_to_currency(item.price, :unit => "€ ", separator: ",") %></p>
+          <div class="bg-primary text-white mt-3 sticked-bottom"> <h5><%= item.shop.name %></h5> </div>
         </div>
       </div>
     </div>
