--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,8 +1,8 @@
 <div class="text-center mb-5 mt-3">
   <h1><%= @category.name %></h1>
 </div>
-<div class="container">
-  <div class="row row-cols-1 row-cols-md-4">
+<div class="container card-custom-container">
+  <div class="row row-cols-1 row-cols-md-4 justify-content-center">
     <% @category.items.each do |item| %>
      <% if !item.is_archived %>
       <%= render 'items/card', item: item %>
