--- a/app/views/items/_plus_minus_quantity_available.html.erb
+++ b/app/views/items/_plus_minus_quantity_available.html.erb
@@ -1,4 +1,4 @@
-<div class="d-flex flex-row justify-content-center">
+<div class="d-flex flex-row justify-content-center mt-3 mb-3">
 <%= button_to item_path(item.id), :method => :patch, :class => "button is-link", params: {operation: "remove"} do %>
   <span class="icon">
     <i class="fas fa-minus-square "></i>
