--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -7,11 +7,10 @@
   <div class="row justify-content-center mb-5 mt-1" >
    <%= link_to "Editer ma boutique", edit_shop_path, :class=>"fas fa-store" %>
   </div>
-  <div class="row mb-3">
+  <div class="row row-cols-1 row-cols-md-3 justify-content-center">
     <% @shop.items.each do |item| %>
      <% if !item.is_archived %>
-      <div class="col-3 text-center" id="grid-col-<%= item.id %>">
-        <h6 class="small-container"><%= item.name %></h6>
+      <div class="text-center" id="grid-col-<%= item.id %>">
         <%= render 'items/card', item: item %>
       </div>
      <% end %>
