--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,52 +1,23 @@
-<!-- Footer -->
-
-<footer class="page-footer font-small blue pt-4">
-  <hr>
-  <!-- Footer Links -->
-  <div class="container-fluid text-center text-md-left">
-
-    <!-- Grid row -->
-    <div class="row py-4 d-flex align-items-center">
-
-      <!-- Grid column -->
-      <div class="col-md-3 mt-md-0 mt-3">
-
-        <!-- Content -->
-        <h5 class="text-uppercase">Le mot de la fin</h5>
-        
-        <p>Be careful about the coronavirus hein.</p>
-
-      </div>
-      <!-- Grid column -->
-
-      <hr class="clearfix w-100 d-md-none pb-3">
-
-      <!-- Grid column -->
-      <div class="col-md-3 mb-md-0 mb-3">
-
-        <!-- Links -->
-        <h5 class="text-uppercase">Réseaux sociaux</h5>
-        
+<footer id="footer-color" class="page-footer font-small blue pt-4">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 col-sm-12">
+        <h4> Réseaux sociaux </h4>
         <ul class="list-unstyled">
           <li>
             <i class="fab fa-facebook-square"></i>
             <a href="https://www.facebook.com/LatelierdesNouveauxDesigns/">Facebook</a>
           </li>
           <li>
-          <i class="fab fa-linkedin"></i>
+            <i class="fab fa-linkedin"></i>
             <a href="https://www.linkedin.com/company/atelier-des-nouveaux-designs/">Linkedin</a>
           </li>
-
         </ul>
-
       </div>
 
-     <div class="col-md-3 mb-md-0 mb-3">
-
-        <!-- Links -->
-        <h5 class="text-uppercase">A propos</h5>
-        
-        <ul class="list-unstyled">
+      <div class="col-md-4 col-sm-12">
+				<h4> A propos </h4>
+				<ul class="list-unstyled">
           <li>
             <a href="#!">Devenir créateur</a>
           </li>
@@ -59,18 +30,11 @@
           <li>
             <a href="#!">FAQ</a>
           </li>
-        </ul>
+				</ul>
+			</div>
 
-      </div>
-      
-      <!-- Grid column -->
-
-      <!-- Grid column -->
-      <div class="col-md-3 mb-md-0 mb-3">
-
-        <!-- Links -->
-        <h5 class="text-uppercase">Aide</h5>
-        
+      <div class="col-md-4 col-sm-12">
+				<h4 class="text"> Aide </h4>        
         <ul class="list-unstyled">
           <li>
             <a href="#!">Nous contacter</a>
@@ -78,28 +42,12 @@
           <li>
             <p> 49 Rue Smith 69002 Lyon, France </p>
           </li>
-          <li>
-            <a href="#!"></a>
-          </li>
-          <li>
-            <a href="#!"></a>
-          </li>
         </ul>
-
-      </div>
-      <!-- Grid column -->
-
+			</div>
     </div>
-    <!-- Grid row -->
-
   </div>
-  <!-- Footer Links -->
-
-  <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2020 Upcycling:
+  <div class="footer-copyright text-center mt-3">© 2020 Upcycling:
     <a href="https://fr.wikipedia.org/wiki/Surcyclage"> Upcyclez et vous verrez</a>
   </div>
-  <!-- Copyright -->
-
 </footer>
-<!-- Footer -->
+
