--- a/app/views/items/_item_show.html.erb
+++ b/app/views/items/_item_show.html.erb
@@ -13,7 +13,7 @@
             </div>
           <% end %>
         <%else%>
-          <%= image_tag "logo.png", class: "d-flex justify-content-center w-75" %>
+          <%= image_tag "#{rand(5)}.jpg", class: "d-flex justify-content-center w-75" %>
         <% end %>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
